<resources>
    <string name="app_name">Squid Arcade</string>
    <string name="game1">Red Light Green Light</string>
    <string name="game2">Marbles</string>
    <string name="home_info">Welcome to SQUID ARCADE please select a game to begin!</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="marbles">Marbles</string>
    <string name="round">Round #</string>
    <string name="requestGamble">Enter number of marbles you want to gamble below:</string>
    <string name="marblesRemaining">Marbles Remaining:</string>
    <string name="request_evenOdd">Do you think your opponent gambled an \n even or odd amount of marbles</string>
    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="rlgl">Red Light Green Light</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>